edit tibble package dependency in function to importFrom instead of import, see if it rectifies Github R-CMD-Check error; add smoothr package in Depends

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,8 @@ importFrom(stars,st_as_stars)
 importFrom(stats,xtabs)
 importFrom(terra,minmax)
 importFrom(terra,rast)
+importFrom(tibble,deframe)
+importFrom(tibble,tibble)
 importFrom(tidyr,complete)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
