--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,6 +39,7 @@ Imports:
     vegan (>= 2.5.7),
     landscapetools (>= 0.5.0),
     glue (>= 1.4.2),
-    units (>= 0.7.2)
+    units (>= 0.7.2),
+    smoothr (>= 0.2.2)
 Language: en-GB
 VignetteBuilder: knitr
