new branch to replace prev branch with non-ignored datasets
prev branch last commit notes:

Created vignettes that exist as articles on the package site

- Created vignettes and altered `_pkgdown.yml` to arrange them in the Articles drop-down list
- Added sample datasets `fauna` and `surveys` from the normalised datasets in the BIRT repo
- Note: `dev` mode was set in the YAML and a new folder "dev" was created in "./docs/". Site html can be found here.
- Note: Actual site formatting differs from individual vignette htmls. Otsu's thresholding figure image was somehow excluded as well.

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -2,7 +2,7 @@ url: https://ecological-cities.github.io/biodivercity/
 title: biodivercity
 
 development:
-  mode: auto
+  mode: devel
 
 home:
   title: R Package - Biodiversity indices for city landscapes
@@ -34,3 +34,21 @@ reference:
   - summarise_landscape_perpt
 - title: "Test model predictions"
   desc: "Validation and accuracy assessments."
+
+articles:
+- title: "Fauna: Summarise data and build models"
+  navbar: ~
+  contents:
+  - build-model_process-fauna
+- title: "Landscape: Build models"
+  navbar: ~
+  contents:
+  - build-model_process-landscape
+- title: "Apply models"
+  navbar: ~
+  contents:
+  - apply-model_predict-fauna
+- title: "Test model predictions"
+  navbar: ~
+  contents:
+  - apply-model_validation
