--- a/docs/dev/pkgdown.yml
+++ b/docs/dev/pkgdown.yml
@@ -5,9 +5,10 @@ articles:
   apply-model_predict-fauna: apply-model_predict-fauna.html
   apply-model_validation: apply-model_validation.html
   biodivercity: biodivercity.html
+  birt-workflow: birt-workflow.html
   build-model_process-fauna: build-model_process-fauna.html
   build-model_process-landscape: build-model_process-landscape.html
-last_built: 2021-10-26T11:14Z
+last_built: 2021-11-26T00:17Z
 urls:
   reference: https://ecological-cities.github.io/biodivercity//reference
   article: https://ecological-cities.github.io/biodivercity//articles
