use importFrom instead of import for glue, to avoid namespace conflict (R CMD Check)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,7 +27,6 @@ import(checkmate)
 import(doParallel)
 import(dplyr)
 import(foreach)
-import(glue)
 import(landscapemetrics)
 import(landscapetools)
 import(osmextract)
@@ -37,8 +36,10 @@ import(terra)
 import(tibble)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
+importFrom(glue,glue)
 importFrom(graphics,hist.default)
 importFrom(magrittr,"%>%")
+importFrom(magrittr,'%>%')
 importFrom(methods,is)
 importFrom(raster,nlayers)
 importFrom(raster,res)
