--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,8 @@ Suggests:
     rmarkdown,
     tidyverse (>= 1.3.1),
     kableExtra (>= 1.3.4),
-    devtools (>= 2.4.2)
+    devtools (>= 2.4.2),
+    leaflet (>= 2.0.4.1)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
