use importFrom instead of import for terra, to remove namespace conflict warnings (R CMD Check)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,7 +32,6 @@ import(landscapetools)
 import(osmextract)
 import(sen2r)
 import(sf)
-import(terra)
 import(tibble)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
@@ -57,7 +56,10 @@ importFrom(smoothr,fill_holes)
 importFrom(stars,st_as_stars)
 importFrom(stats,xtabs)
 importFrom(terra,minmax)
+importFrom(terra,mosaic)
 importFrom(terra,rast)
+importFrom(terra,tmpFiles)
+importFrom(terra,writeRaster)
 importFrom(tibble,deframe)
 importFrom(tibble,tibble)
 importFrom(tidyr,complete)
