convert import to importFrom for pacakges `sen2r` and `osmextract`, to reduce clashes in NAMESPACE

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,8 +29,6 @@ import(dplyr)
 import(foreach)
 import(landscapemetrics)
 import(landscapetools)
-import(osmextract)
-import(sen2r)
 import(sf)
 import(tibble)
 importFrom(dplyr,filter)
@@ -40,6 +38,9 @@ importFrom(graphics,hist.default)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,'%>%')
 importFrom(methods,is)
+importFrom(osmextract,oe_download_directory)
+importFrom(osmextract,oe_match)
+importFrom(osmextract,oe_read)
 importFrom(raster,nlayers)
 importFrom(raster,res)
 importFrom(rlang,":=")
@@ -51,6 +52,7 @@ importFrom(rlang,enquos)
 importFrom(rlang,expr)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
+importFrom(sen2r,list_indices)
 importFrom(smoothr,drop_crumbs)
 importFrom(smoothr,fill_holes)
 importFrom(stars,st_as_stars)
