--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -40,7 +40,8 @@ Suggests:
     tidyverse (>= 1.3.1),
     kableExtra (>= 1.3.4),
     devtools (>= 2.4.2),
-    leaflet (>= 2.0.4.1)
+    leaflet (>= 2.0.4.1),
+    tmap (>= 3.3.2)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
@@ -68,8 +69,7 @@ Imports:
     glue (>= 1.4.2),
     units (>= 0.7.2),
     smoothr (>= 0.2.2),
-    sen2r (>= 1.5.0), 
-    tmap (>= 3.3.2)
+    sen2r (>= 1.5.0)
 Language: en-GB
 VignetteBuilder: knitr
 Depends: 
