--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,7 +6,7 @@ export(.data)
 export(as_label)
 export(as_name)
 export(check_taxongrps)
-export(classify_mosaic)
+export(classify_image_binary)
 export(enquo)
 export(enquos)
 export(exclude_simulator)
