--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -122,7 +122,7 @@ reference:
   desc: "**_Get, process and summarise landscape data at survey locations_**"
 - contents:
   - mosaic_sen2r
-  - classify_mosaic
+  - classify_image_binary
   - threshold_otsu
   - lsm_perpoint
   - get_roads_osm
