--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -105,10 +105,10 @@ reference:
 - title: "Data"
   desc: "**_Example datasets_**"
 - contents:
-  - area
-  - points
-  - fauna
-  - surveys
+  - sampling_areas
+  - sampling_points
+  - animal_surveys
+  - animal_observations
 - title: "Animal surveys"
   desc: "**_Get, process and summarise data from animal surveys_**"
 - contents:
