try to replace import with importFrom for functions in the following packages. Yet to test if they will work.
- stars
- doParalllel
- landscapemetrics
- tibble
- sf

Packages removed entirely from DESCRIPTION:
- landsacpetools

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,17 +24,15 @@ export(sym)
 export(syms)
 export(threshold_otsu)
 import(checkmate)
-import(doParallel)
 import(dplyr)
 import(foreach)
-import(landscapemetrics)
-import(landscapetools)
 import(sf)
-import(tibble)
+importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,filter)
 importFrom(dplyr,mutate)
 importFrom(glue,glue)
 importFrom(graphics,hist.default)
+importFrom(landscapemetrics,sample_lsm)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,'%>%')
 importFrom(methods,is)
@@ -53,14 +51,38 @@ importFrom(rlang,expr)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(sen2r,list_indices)
+importFrom(sf,st_agr)
+importFrom(sf,st_area)
+importFrom(sf,st_as_sf)
+importFrom(sf,st_as_text)
+importFrom(sf,st_buffer)
+importFrom(sf,st_cast)
+importFrom(sf,st_combine)
+importFrom(sf,st_crs)
+importFrom(sf,st_difference)
+importFrom(sf,st_geometry)
+importFrom(sf,st_geometry_type)
+importFrom(sf,st_intersection)
+importFrom(sf,st_is_empty)
+importFrom(sf,st_is_longlat)
+importFrom(sf,st_is_valid)
+importFrom(sf,st_length)
+importFrom(sf,st_make_valid)
+importFrom(sf,st_read)
+importFrom(sf,st_sample)
+importFrom(sf,st_set_geometry)
+importFrom(sf,st_transform)
+importFrom(sf,st_union)
+importFrom(sf,st_write)
+importFrom(sf,st_zm)
 importFrom(smoothr,drop_crumbs)
 importFrom(smoothr,fill_holes)
-importFrom(stars,st_as_stars)
 importFrom(stats,xtabs)
 importFrom(terra,minmax)
 importFrom(terra,mosaic)
+importFrom(terra,nlyr)
 importFrom(terra,rast)
-importFrom(terra,tmpFiles)
+importFrom(terra,values)
 importFrom(terra,writeRaster)
 importFrom(tibble,deframe)
 importFrom(tibble,tibble)
