--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,7 +29,13 @@ import(foreach)
 import(sf)
 importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,inner_join)
+importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
+importFrom(dplyr,slice_sample)
+importFrom(dplyr,summarise)
 importFrom(glue,glue)
 importFrom(graphics,hist.default)
 importFrom(landscapemetrics,sample_lsm)
