--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -41,7 +41,8 @@ Suggests:
     kableExtra (>= 1.3.4),
     devtools (>= 2.4.2),
     leaflet (>= 2.0.4.1),
-    tmap (>= 3.3.2)
+    tmap (>= 3.3.2),
+    ggplot2 (>= 3.3.5)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
