--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -79,6 +79,8 @@ navbar:
         href: articles/more/animals-data-summaries.html
       - text: Animals - Species-level analyses
         href: articles/more/animals-species-analyses.html
+      - text: Animals - Simulate missing surveys
+        href: articles/more/animals-simulate-missing-surveys.html
       - text: Landscapes - Land cover patterns
         href: articles/more/landscapes-landcover-patterns.html
       - text: Landscapes - Urban density
