rename filter_obs() to filter_observations(); sptally_extractor() to tally_observations(); sac_extractor() to calculate_sac(). Makes the use of the function more intuitive. Pls take note @edwintyw. Will not re-build pkgdown site; you can do so if you want changes incorporated in Q22 progress report
- made respective changes in examples, tests and vignettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,23 +5,23 @@ export(":=")
 export(.data)
 export(as_label)
 export(as_name)
+export(calculate_sac)
 export(check_taxongrps)
 export(classify_image_binary)
 export(enquo)
 export(enquos)
 export(exclude_simulator)
 export(expr)
-export(filter_obs)
+export(filter_observations)
 export(get_buildings_osm)
 export(get_roads_osm)
 export(lsm_perpoint)
 export(mosaic_sen2r)
 export(random_pt_gen)
-export(sac_extractor)
-export(sptally_extractor)
 export(summarise_landscape_perpt)
 export(sym)
 export(syms)
+export(tally_observations)
 export(threshold_otsu)
 import(checkmate)
 import(dplyr)
