add first draft of lsm_perpoint_specified() and osm_perpoint_specified()
- allows user to specify exactly (by name) which predictors to summarise at sampling points (and at what buffer radius)

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,7 +68,10 @@ Imports:
     glue (>= 1.4.2),
     units (>= 0.7.2),
     smoothr (>= 0.2.2),
-    sen2r (>= 1.5.0)
+    sen2r (>= 1.5.0),
+    purrr (>= 0.3.4),
+    stringr (>= 1.4.0),
+    tidyselect (>= 1.1.1)
 Language: en-GB
 VignetteBuilder: knitr
 Depends: 
