--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,9 @@ export(filter_observations)
 export(get_buildings_osm)
 export(get_roads_osm)
 export(lsm_perpoint)
+export(lsm_perpoint_specified)
 export(mosaic_sen2r)
+export(osm_perpoint_specified)
 export(random_pt_gen)
 export(summarise_landscape_perpt)
 export(sym)
@@ -41,12 +43,11 @@ importFrom(graphics,hist.default)
 importFrom(landscapemetrics,sample_lsm)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,'%>%')
-importFrom(methods,is)
 importFrom(osmextract,oe_download_directory)
 importFrom(osmextract,oe_match)
 importFrom(osmextract,oe_read)
-importFrom(raster,nlayers)
-importFrom(raster,res)
+importFrom(purrr,map_dfr)
+importFrom(purrr,reduce)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
@@ -54,6 +55,7 @@ importFrom(rlang,as_name)
 importFrom(rlang,enquo)
 importFrom(rlang,enquos)
 importFrom(rlang,expr)
+importFrom(rlang,is_empty)
 importFrom(rlang,sym)
 importFrom(rlang,syms)
 importFrom(sen2r,list_indices)
@@ -84,16 +86,29 @@ importFrom(sf,st_zm)
 importFrom(smoothr,drop_crumbs)
 importFrom(smoothr,fill_holes)
 importFrom(stats,xtabs)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_extract)
+importFrom(terra,extract)
 importFrom(terra,minmax)
 importFrom(terra,mosaic)
 importFrom(terra,nlyr)
 importFrom(terra,rast)
+importFrom(terra,res)
 importFrom(terra,values)
+importFrom(terra,vect)
 importFrom(terra,writeRaster)
 importFrom(tibble,deframe)
+importFrom(tibble,rownames_to_column)
 importFrom(tibble,tibble)
 importFrom(tidyr,complete)
+importFrom(tidyr,drop_na)
 importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
+importFrom(tidyr,replace_na)
 importFrom(tidyr,separate)
+importFrom(tidyselect,any_of)
+importFrom(tidyselect,contains)
+importFrom(tidyselect,everything)
+importFrom(tidyselect,matches)
+importFrom(units,set_units)
 importFrom(vegan,specaccum)
