--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -67,7 +67,7 @@ navbar:
       - text: 4. Apply models
         href: articles/apply-models.html
       - text: 5. Test models
-        href: articles/test-models.html
+        href:
       - text: 6. Scoring and benchmarking
         href:
     more:
@@ -78,17 +78,17 @@ navbar:
       - text: Animals - Data summaries
         href: articles/more/animals-data-summaries.html
       - text: Animals - Species-level analyses
-        href: articles/more/animals-species-analyses.html
+        href:
       - text: Animals - Simulate missing surveys
         href: articles/more/animals-simulate-missing-surveys.html
       - text: Landscapes - Land cover patterns
-        href: articles/more/landscapes-landcover-patterns.html
+        href:
       - text: Landscapes - Urban density
         href:
       - text: Landscapes - Monitoring vs. Planning
         href:
       - text: Models - Local diversity
-        href: articles/more/models-local-diversity.html
+        href:
       - text: Models - Community diversity
         href:
       - text: Models - Future updates
