--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -111,6 +111,7 @@ reference:
   - sampling_points
   - animal_surveys
   - animal_observations
+  - points_landscape
 - title: "Animal surveys"
   desc: "**_Get, process and summarise data from animal surveys_**"
 - contents:
