change format of model objects provided in package, add example of how to use in vignette test-models.Rmd
- recipes::recipe() object used to transform new data to appropriate format (scale, centre), based on the original input data for each of the models
- add first draft of new function validate_newdata()
- add helper function booter() for use within test-models.Rmd (bootstrapped accuracy statistics)

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -136,3 +136,4 @@ reference:
   desc: "**_Predict and validate animal diversity_**"
 - contents:
   - summarise_landscape_perpt
+  - validate_newdata
