--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,7 +42,8 @@ Suggests:
     devtools (>= 2.4.2),
     leaflet (>= 2.0.4.1),
     tmap (>= 3.3.2),
-    ggplot2 (>= 3.3.5)
+    ggplot2 (>= 3.3.5),
+    scales
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
@@ -70,7 +71,11 @@ Imports:
     sen2r (>= 1.5.0),
     purrr (>= 0.3.4),
     stringr (>= 1.4.0),
-    tidyselect (>= 1.1.1)
+    tidyselect (>= 1.1.1),
+    MuMIn (>= 1.43.17),
+    AICcmodavg (>= 2.3.1),
+    lme4 (>= 1.1.27.1),
+    recipes (>= 0.1.17)
 Language: en-GB
 VignetteBuilder: knitr
 Depends: 
