--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,10 +25,12 @@ export(sym)
 export(syms)
 export(tally_observations)
 export(threshold_otsu)
+export(validate_newdata)
 import(checkmate)
 import(dplyr)
 import(foreach)
 import(sf)
+importFrom(AICcmodavg,modavgPred)
 importFrom(doParallel,registerDoParallel)
 importFrom(dplyr,filter)
 importFrom(dplyr,group_by)
@@ -36,11 +38,13 @@ importFrom(dplyr,inner_join)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,n)
+importFrom(dplyr,select)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarise)
 importFrom(glue,glue)
 importFrom(graphics,hist.default)
 importFrom(landscapemetrics,sample_lsm)
+importFrom(lme4,ranef)
 importFrom(magrittr,"%>%")
 importFrom(magrittr,'%>%')
 importFrom(osmextract,oe_download_directory)
@@ -48,6 +52,7 @@ importFrom(osmextract,oe_match)
 importFrom(osmextract,oe_read)
 importFrom(purrr,map_dfr)
 importFrom(purrr,reduce)
+importFrom(recipes,bake)
 importFrom(rlang,":=")
 importFrom(rlang,.data)
 importFrom(rlang,as_label)
@@ -85,6 +90,7 @@ importFrom(sf,st_write)
 importFrom(sf,st_zm)
 importFrom(smoothr,drop_crumbs)
 importFrom(smoothr,fill_holes)
+importFrom(stats,sd)
 importFrom(stats,xtabs)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_extract)
@@ -106,9 +112,11 @@ importFrom(tidyr,pivot_longer)
 importFrom(tidyr,pivot_wider)
 importFrom(tidyr,replace_na)
 importFrom(tidyr,separate)
+importFrom(tidyselect,all_of)
 importFrom(tidyselect,any_of)
 importFrom(tidyselect,contains)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
+importFrom(tidyselect,starts_with)
 importFrom(units,set_units)
 importFrom(vegan,specaccum)
