--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -42,8 +42,7 @@ Suggests:
     devtools (>= 2.4.2),
     leaflet (>= 2.0.4.1),
     tmap (>= 3.3.2),
-    ggplot2 (>= 3.3.5),
-    scales
+    ggplot2 (>= 3.3.5)
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
