add sampling_forest documentation, re-export dataset with columns 'name' and 'isConey' removed @edwintyw
- /data-raw/process.Rmd is updated

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -108,6 +108,7 @@ reference:
   desc: "**_Example datasets_**"
 - contents:
   - sampling_areas
+  - sampling_forest
   - sampling_points
   - animal_surveys
   - animal_observations
