add import dependencies to heatmap_raster() and geom_to_grid()
- in heatmap_raster(), replace raster::raster() with stars::st_rasterize() to get template raster of defined grid pixel size, because conversion of raster to terra object later on doesn't work

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,8 +13,10 @@ export(enquos)
 export(exclude_simulator)
 export(expr)
 export(filter_observations)
+export(geom_to_grid)
 export(get_buildings_osm)
 export(get_roads_osm)
+export(heatmap_raster)
 export(lsm_perpoint)
 export(lsm_perpoint_specified)
 export(mosaic_sen2r)
@@ -90,6 +92,8 @@ importFrom(sf,st_write)
 importFrom(sf,st_zm)
 importFrom(smoothr,drop_crumbs)
 importFrom(smoothr,fill_holes)
+importFrom(stars,st_as_stars)
+importFrom(stars,st_rasterize)
 importFrom(stats,sd)
 importFrom(stats,xtabs)
 importFrom(stringr,str_detect)
@@ -99,6 +103,7 @@ importFrom(terra,minmax)
 importFrom(terra,mosaic)
 importFrom(terra,nlyr)
 importFrom(terra,rast)
+importFrom(terra,rasterize)
 importFrom(terra,res)
 importFrom(terra,values)
 importFrom(terra,vect)
