--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -75,7 +75,8 @@ Imports:
     MuMIn (>= 1.43.17),
     AICcmodavg (>= 2.3.1),
     lme4 (>= 1.1.27.1),
-    recipes (>= 0.1.17)
+    recipes (>= 0.1.17),
+    stars (>= 0.5.5)
 Language: en-GB
 VignetteBuilder: knitr
 Depends: 
