--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -136,5 +136,7 @@ reference:
 - title: "Models"
   desc: "**_Predict and validate animal diversity_**"
 - contents:
+  - geom_to_grid
   - summarise_landscape_perpt
+  - heatmap_raster
   - validate_newdata
