revise apply-models vignette and functions
- change geom_to_grid() to generate_grid()
- change heatmap_raster() to predict_heatmap()
- successfully use model/recipe objects & recipes::bake()
- simplify functions and remove unnecessary arguments
- For example, in predict_heatmap(), use st_buffer() to get grid squares from grid points, instead of re-using st_make_grid()
- remove references to sites/uid in summarise_landscape_perpt() & other functions, since user may not have the column 'sites'. Instead, make uid internally in the function (then remove)
- In vignette, add more details/output to make it easier to follow along

- @hongjhun Can you update & send us _/data-raw/process.Rmd_ to document the processing of extdata pg_layers.Rdata? Also, since natveg & water are outside of AOI, not sure if we should include them?
- FYI @edwintyw

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -43,7 +43,8 @@ Suggests:
     leaflet (>= 2.0.4.1),
     tmap (>= 3.3.2),
     ggplot2 (>= 3.3.5),
-    treemapify
+    treemapify,
+    viridis
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
