--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,14 +13,14 @@ export(enquos)
 export(exclude_simulator)
 export(expr)
 export(filter_observations)
-export(geom_to_grid)
+export(generate_grid)
 export(get_buildings_osm)
 export(get_roads_osm)
-export(heatmap_raster)
 export(lsm_perpoint)
 export(lsm_perpoint_specified)
 export(mosaic_sen2r)
 export(osm_perpoint_specified)
+export(predict_heatmap)
 export(random_pt_gen)
 export(summarise_landscape_perpt)
 export(sym)
@@ -70,6 +70,7 @@ importFrom(sf,st_agr)
 importFrom(sf,st_area)
 importFrom(sf,st_as_sf)
 importFrom(sf,st_as_text)
+importFrom(sf,st_bbox)
 importFrom(sf,st_buffer)
 importFrom(sf,st_cast)
 importFrom(sf,st_combine)
@@ -81,7 +82,9 @@ importFrom(sf,st_intersection)
 importFrom(sf,st_is_empty)
 importFrom(sf,st_is_longlat)
 importFrom(sf,st_is_valid)
+importFrom(sf,st_join)
 importFrom(sf,st_length)
+importFrom(sf,st_make_grid)
 importFrom(sf,st_make_valid)
 importFrom(sf,st_read)
 importFrom(sf,st_sample)
@@ -122,6 +125,5 @@ importFrom(tidyselect,any_of)
 importFrom(tidyselect,contains)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
-importFrom(tidyselect,starts_with)
 importFrom(units,set_units)
 importFrom(vegan,specaccum)
