--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -44,7 +44,9 @@ Suggests:
     tmap (>= 3.3.2),
     ggplot2 (>= 3.3.5),
     treemapify,
-    viridis
+    viridis,
+    sen2r,
+    geojsonsf
 Config/testthat/edition: 3
 Encoding: UTF-8
 LazyData: true
