document changes when added na_threshold argument to lsm_perpoint_specified()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -125,5 +125,6 @@ importFrom(tidyselect,any_of)
 importFrom(tidyselect,contains)
 importFrom(tidyselect,everything)
 importFrom(tidyselect,matches)
+importFrom(tidyselect,starts_with)
 importFrom(units,set_units)
 importFrom(vegan,specaccum)
