--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -68,8 +68,8 @@ navbar:
         href: articles/apply-models.html
       - text: 5. Test models
         href: articles/test-models.html
-      - text: 6. Scoring and benchmarking
-        href:
+      - text: 6. Citywide benchmarking
+        href: articles/citywide-benchmarking.html
     more:
       text: More details
       menu:
@@ -82,7 +82,7 @@ navbar:
       - text: Animals - Simulate missing surveys
         href: articles/more/animals-simulate-missing-surveys.html
       - text: Landscapes - Monitoring vs. Planning
-        href:
+        href: articles/more/monitoring-vs-planning.html
       - text: Models - Future updates
         href:
     reference:
