prelim re-naming of functions for feature generation, and amended in vignettes accordingly. Issue #24
- summarise_landscape_perpt() -> genfeatures_vect()
- lsm_perpoint() -> genfeatures_lsm()
- lsm_perpoint_specified() -> genfeatures_lsm_specified()
- osm_perpoint_specified() -> genfeatures_osm_specified()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,14 +14,16 @@ export(exclude_simulator)
 export(expr)
 export(filter_observations)
 export(generate_grid)
+export(genfeatures_lsm)
+export(genfeatures_lsm_specified)
+export(genfeatures_osm_specified)
+export(genfeatures_vect)
 export(get_buildings_osm)
 export(get_roads_osm)
-export(lsm_perpoint)
-export(lsm_perpoint_specified)
 export(mosaic_sen2r)
-export(osm_perpoint_specified)
 export(predict_heatmap)
 export(random_pt_gen)
+export(standard_SR)
 export(summarise_landscape_perpt)
 export(sym)
 export(syms)
