--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -120,13 +120,13 @@ reference:
   - mosaic_sen2r
   - classify_image_binary
   - threshold_otsu
-  - lsm_perpoint
-  - lsm_perpoint_specified
-  - osm_perpoint_specified
+  - genfeatures_vect
+  - genfeatures_lsm
+  - genfeatures_lsm_specified
+  - genfeatures_osm_specified
 - title: "Models"
   desc: "**_Predict and validate animal diversity_**"
 - contents:
   - generate_grid
-  - summarise_landscape_perpt
   - predict_heatmap
   - validate_newdata
