add genfeatures_osm() to generate osm-related (buildings/roads) features in bulk.
- rename genfeatures_vect() to genfeatures_manual(), since naming by data type is not very accurate
- make respective changes to vignette, change remaining 50/100m to 100/200m buffer sizes @edwintyw
- regenerate site
- https://github.com/ecological-cities/birt/issues/24

--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -104,7 +104,7 @@ reference:
   - animal_observations
   - points_landscape
 - title: "Animal surveys"
-  desc: "**_Get, process and summarise data from animal surveys_**"
+  desc: "**_Get, process and summarise data from animal surveys at point locations_**"
 - contents:
   - random_pt_gen
   - filter_observations
@@ -120,8 +120,9 @@ reference:
   - mosaic_sen2r
   - classify_image_binary
   - threshold_otsu
-  - genfeatures_vect
+  - genfeatures_manual
   - genfeatures_lsm
+  - genfeatures_osm
   - genfeatures_lsm_specified
   - genfeatures_osm_specified
 - title: "Models"
