--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,15 +16,15 @@ export(filter_observations)
 export(generate_grid)
 export(genfeatures_lsm)
 export(genfeatures_lsm_specified)
+export(genfeatures_manual)
+export(genfeatures_osm)
 export(genfeatures_osm_specified)
-export(genfeatures_vect)
 export(get_buildings_osm)
 export(get_roads_osm)
 export(mosaic_sen2r)
 export(predict_heatmap)
 export(random_pt_gen)
 export(standard_SR)
-export(summarise_landscape_perpt)
 export(sym)
 export(syms)
 export(tally_observations)
