change name of functions after discussion https://github.com/ecological-cities/birt/issues/24

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,11 @@ export(":=")
 export(.data)
 export(as_label)
 export(as_name)
+export(calc_lsm)
+export(calc_manual)
+export(calc_osm)
+export(calc_specific_lsm)
+export(calc_specific_osm)
 export(calculate_sac)
 export(check_taxongrps)
 export(classify_image_binary)
@@ -14,11 +19,6 @@ export(exclude_simulator)
 export(expr)
 export(filter_observations)
 export(generate_grid)
-export(genfeatures_lsm)
-export(genfeatures_lsm_specified)
-export(genfeatures_manual)
-export(genfeatures_osm)
-export(genfeatures_osm_specified)
 export(get_buildings_osm)
 export(get_roads_osm)
 export(mosaic_sen2r)
