add dependency for graphics::hist() function in threshold_otsu() function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,slice_sample)
 importFrom(dplyr,summarise)
 importFrom(glue,glue)
+importFrom(graphics,hist)
 importFrom(landscapemetrics,sample_lsm)
 importFrom(lme4,ranef)
 importFrom(magrittr,"%>%")
