--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -78,7 +78,8 @@ Imports:
     AICcmodavg (>= 2.3.1),
     lme4 (>= 1.1.27.1),
     recipes (>= 0.1.17),
-    stars (>= 0.5.5)
+    stars (>= 0.5.5),
+    graphics (>= 4.1.1)
 Language: en-GB
 VignetteBuilder: knitr
 Depends: 
