revise standard_sr() to pass R-CMD-CHECK and to replace town/round/priority with area/preiod/taxon.
- add package names & '::' before each non-base-R function
- remove parallel processing to reduce dependency
- still not sure what is the purpose of this function (new SACs?). It is within the package but currently not included in the pkgdown website (FYI @edwintyw)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,7 +24,7 @@ export(get_roads_osm)
 export(mosaic_sen2r)
 export(predict_heatmap)
 export(random_pt_gen)
-export(standard_SR)
+export(standard_sr)
 export(sym)
 export(syms)
 export(tally_observations)
