--- a/_pkgdown.yml
+++ b/_pkgdown.yml
@@ -11,7 +11,7 @@ template:
   opengraph:
     image:
       src: man/figures/logo.png
-      alt: "Spatial predictions of biodiversity across urban landscapes"
+      alt: "Spatial predictions of biodiversity across city landscapes"
 
 development:
   mode: auto
@@ -21,6 +21,8 @@ authors:
     href: https://github.com/kwekiii
   Xiao Ping Song:
     href: https://xp-song.github.io
+  Rachel Lee:
+    href: https://github.com/rachelleesk
   Justin Nai:
     href: https://github.com/JustinNai
   Edwin Tan:
@@ -29,24 +31,22 @@ authors:
     href: https://github.com/hongjhun
 
 home:
-  title: Biodiversity indices for city landscapes
-  description: Assess the diversity of animal species in urban areas.
+  title: Spatial predictions of biodiversity across city landscapes
+  description: An R package for spatial assessment of biodiversity across city landscapes.
   links:
   sidebar:
     structure: [license, citation, authors, community, links, custom, dev]
     roles: [cre, aut]
     components:
       custom:
-        title: Funding
-        text: The Singapore Ministry of National Development Research Fund funded the grant project (2016–2022) that contributed to the development of this package. The grant was awarded to the National University of Singapore, in partnership with the Singapore Housing & Development Board.
-
+        title: Acknowledgements
+        text: The Singapore Ministry of National Development Research Fund funded the grant project (2016–2022) that contributed to the development of this package. The grant was awarded to the National University of Singapore, in partnership with the Singapore Housing & Development Board (HDB).<br><br>We gratefully acknowledge Hugh TW Tan, Darren Yeo, Jie Yi Chan, Sherry Hung, Chloe Tan, Leonard Cai, Audrey Xu, Wi Ming Chin and Yong Kiat Chua, as well as HDB Deputy CEO (Building) Johnny Wong and Director (Landscape and Design) Wan Khin Wai for their involvement in the project.
 footer:
   structure:
-    left: team
+    left: developed_by
     right: [organisation]
   components:
     organisation: _biodivercity_ is a part of [__ecological-cities__](https://github.com/ecological-cities)
-    team: Copyright &copy; 2022 [Kwek Yan Chong](https://github.com/kwekiii), [Xiao Ping Song](https://xp-song.github.io), [Justin Nai](https://github.com/JustinNai), [Edwin Tan](https://github.com/edwintyw), [Hong Jhun Sim](https://github.com/hongjhun) and contributors.
 
 
 
